added hit boxes and collision damage

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 <canvas id="canvas1"></canvas>
-<img id="playerImage" src="assets/player4.png">
+<img id="playerImage" src="assets/player7.png">
 <img id="backgroundImage" src="assets/background.png">
-<img id="enemyImage" src="assets/enemy.png">
+<img id="enemyImage" src="assets/enemy2.png">
 
 <script src="/js/script.js"></script>
 </body>
