--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <canvas id="canvas1"></canvas>
 <img id="playerImage" src="assets/player7.png">
-<img id="backgroundImage" src="assets/background.png">
+<img id="backgroundImage" src="assets/background2.png">
 <img id="enemyImage" src="assets/enemy2.png">
 
 <script src="/js/script.js"></script>
