--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 <img id="backgroundImage" src="assets/background2.png">
 <img id="enemyImage" src="assets/enemy2.png">
 
-<script src="/js/script.js"></script>
+<!-- <script src="/js/script.js"></script>
 </body>
 </html>
